--- a/elastic-bg-server/src/main/resources/application-dev.properties
+++ b/elastic-bg-server/src/main/resources/application-dev.properties
@@ -1,9 +1,9 @@
 
 #mysql
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/elasticbg?useSSL=false&serverTimezone=Asia/Shanghai&characterEncoding=utf8&allowMultiQueries=true
+spring.datasource.url=jdbc:mysql://localhost:3306/test?useSSL=false&serverTimezone=Asia/Shanghai&characterEncoding=utf8&allowMultiQueries=true
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=wulin
 
 #rpc
 spring.grpc.enable=true
